WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279177
[GTK][WPE][GStreamer] Fix build with glib < 2.68
https://bugs.webkit.org/show_bug.cgi?id=279177
Summary
[GTK][WPE][GStreamer] Fix build with glib < 2.68
Miguel Gomez
Reported
2024-09-05 03:51:01 PDT
g_memdup2 was added since 2.68 when g_memdup was deprecated. But for versions older than 2.68 we need to use g_memdup.
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2024-09-05 03:53:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33174
EWS
Comment 2
2024-09-05 09:28:49 PDT
Committed
283216@main
(e6024502b5ca): <
https://commits.webkit.org/283216@main
> Reviewed commits have been landed. Closing PR #33174 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug