[GTK][WPE][GStreamer] Fix build with glib < 2.68 https://bugs.webkit.org/show_bug.cgi?id=279177

Reviewed by Philippe Normand and Michael Catanzaro.

Replace the usage of g_memdup2 with an equivalent code.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(gst_buffer_new_memdup):

Canonical link: https://commits.webkit.org/283216@main